feat: minor change footer
- sort import
- add and change wording for login

--- a/locales/en.json
+++ b/locales/en.json
@@ -137,6 +137,7 @@
     "search": "Search",
     "cart": "Cart",
     "account": "Account",
+    "login": "Login",
     "newsletter": "Stay in touch",
     "newsletterDesc": "Stay updated for new items & special offer"
   },
