--- a/locales/id.json
+++ b/locales/id.json
@@ -136,6 +136,7 @@
     "search": "Pencarian",
     "cart": "Keranjang",
     "account": "Akun",
+    "login": "Masuk",
     "newsletter": "Tetap berlangganan",
     "newsletterDesc": "Tetap update untuk item baru & penawaran khusus"
   },
