--- a/locales/id.json
+++ b/locales/id.json
@@ -77,6 +77,7 @@
     "errorSKUTitle": "Mohon maaf, pesanan belum dapat diproses",
     "invalidItems": "Daftar produk yang tidak valid: ",
     "isEmpty": "Anda belum menambahkan barang",
+    "prefixItem": "Terdapat",
     "item": "Barang",
     "limitStock": "Tidak bisa melebihi stok yang tersedia",
     "noteToSeller": "Catatan untuk penjual",
