--- a/locales/en.json
+++ b/locales/en.json
@@ -420,10 +420,12 @@
     "yourReview": "Your Review"
   },
   "products": {
+    "category": "Categories",
     "customize": "Customize",
     "item": "item",
     "seeAllProduct": "See all products",
     "show": "Showing",
+    "sort": "Sort",
     "title": "All Products"
   },
   "register": {
