fix: login page
- change locales language
- modified scss to handle fb

--- a/locales/en.json
+++ b/locales/en.json
@@ -74,7 +74,7 @@
     "home": "Home",
     "cart": "Cart",
     "login": "Login",
-    "Account": "Account"
+    "account": "Account"
   },
   "cart": {
     "amount": "Amount",
