--- a/locales/id.json
+++ b/locales/id.json
@@ -74,7 +74,7 @@
     "home": "Beranda",
     "cart": "Keranjang",
     "login": "Masuk",
-    "Account": "Akun"
+    "account": "Akun"
   },
   "cart": {
     "amount": "Jumlah",
