--- a/locales/en.json
+++ b/locales/en.json
@@ -275,7 +275,7 @@
     "allEmpty": "All field must not be empty",
     "billingEmpty": "All field on Billing Address Form must not be empty",
     "discountBundle": "Discount Bundle",
-    "placeOrder": "Place Order",
+    "placeOrder": "Order",
     "pointsApplied": "Points applied",
     "pointsLeft": "Points left",
     "shipping": "Shipping Cost",
@@ -285,7 +285,8 @@
     "usePoints": "Use point",
     "useVoucher": "Use voucher",
     "viewCart": "View Cart",
-    "voucherApplied": "Voucher applied"
+    "voucherApplied": "Voucher applied",
+    "yourCart": "Your Cart"
   },
   "pageHeader": {
     "back": "back"
