--- a/locales/id.json
+++ b/locales/id.json
@@ -275,7 +275,7 @@
     "allEmpty": "Semua kolom tidak boleh kosong",
     "billingEmpty": "Semua kolom di alamat penagihan tidak boleh kosong",
     "discountBundle": "Paket Diskon",
-    "placeOrder": "Buat Pesanan",
+    "placeOrder": "Pesan",
     "pointsApplied": "Point digunakan",
     "pointsLeft": "Point tersisa",
     "shipping": "Biaya pengiriman",
@@ -285,7 +285,8 @@
     "useVoucher": "Gunakan voucher",
     "usePoints": "Gunakan poin",
     "viewCart": "Liat Keranjang",
-    "voucherApplied": "Voucher digunakan"
+    "voucherApplied": "Voucher digunakan",
+    "yourCart": "Keranjang anda"
   },
   "pageHeader": {
     "back": "Kembali"
