feat: search page
- create layout search
- product list,category, filter & sort

--- a/locales/en.json
+++ b/locales/en.json
@@ -74,7 +74,8 @@
     "home": "Home",
     "cart": "Cart",
     "login": "Login",
-    "account": "Account"
+    "account": "Account",
+    "search": "Search"
   },
   "cart": {
     "amount": "Amount",
