feature: product cross sell

--- a/locales/id.json
+++ b/locales/id.json
@@ -275,7 +275,8 @@
     "allEmpty": "Semua kolom tidak boleh kosong",
     "billingEmpty": "Semua kolom di alamat penagihan tidak boleh kosong",
     "discountBundle": "Paket Diskon",
-    "placeOrder": "Pesan",
+    "pay": "Bayar",
+    "placeOrder": "Beli",
     "pointsApplied": "Point digunakan",
     "pointsLeft": "Point tersisa",
     "shipping": "Biaya pengiriman",
