--- a/locales/en.json
+++ b/locales/en.json
@@ -275,7 +275,8 @@
     "allEmpty": "All field must not be empty",
     "billingEmpty": "All field on Billing Address Form must not be empty",
     "discountBundle": "Discount Bundle",
-    "placeOrder": "Order",
+    "pay": "Pay",
+    "placeOrder": "Checkout",
     "pointsApplied": "Points applied",
     "pointsLeft": "Points left",
     "shipping": "Shipping Cost",
