--- a/locales/en.json
+++ b/locales/en.json
@@ -76,7 +76,8 @@
     "login": "Login",
     "account": "Account",
     "search": "Search",
-    "lookbook":"Lookbook"
+    "lookbook":"Lookbook",
+    "forgotPassword":"Forgot Password"
   },
   "cart": {
     "amount": "Amount",
@@ -152,7 +153,8 @@
   },
   "forgotPassword": {
     "requestFail": "Password reset request fail.",
-    "requestSuccessful": "Password reset request successful. Please check your email."
+    "titleSuccessful": "Check Your Email!",
+    "requestSuccessful": "We have sent instructions to your email to update your password."
   },
   "giftCard": {
     "desc": "Give someone something to smile about by purchasing our online gift card. An email containing the e-gift card will be sent to them and they can spend it on any item(s).",
