--- a/locales/id.json
+++ b/locales/id.json
@@ -76,7 +76,8 @@
     "login": "Masuk",
     "account": "Akun",
     "search": "Pencarian",
-    "lookbook": "Lookbook"
+    "lookbook": "Lookbook",
+    "forgotPassword":"Lupa Kata Sandi"
   },
   "cart": {
     "amount": "Jumlah",
@@ -152,7 +153,8 @@
   },
   "forgotPassword": {
     "requestFail": "Pengaturan ulang sandi gagal.",
-    "requestSuccessful": "Pengaturan ulang kata sandi berhasil. Silakan periksa email Anda."
+    "titleSuccessful": "Cek Email Anda!",
+    "requestSuccessful": "Kami telah mengirim instruksi ke email Anda untuk memperbarui kata sandi Anda."
   },
   "giftCard": {
     "desc": "Berikan sesuatu untuk membuat seseorang tersenyum dengan membeli kartu hadiah online kami. Email yang berisi kartu hadiah elektronik akan dikirim kepada mereka dan mereka dapat membelanjakannya untuk barang apa pun.",
@@ -212,7 +214,7 @@
     "email": "Email",
     "failed": "Gagal untuk login cek kembali email dan kata sandi anda",
     "insertEmail": "Masukan Email Anda",
-    "insertPassword": " Masukan Kata Sandi Anda",
+    "insertPassword": "Masukan Kata Sandi Anda",
     "login": "Masuk",
     "password": "Kata Sandi",
     "success": "Login berhasil",
