feat: lookbook detail
- ada related products

--- a/locales/en.json
+++ b/locales/en.json
@@ -230,7 +230,8 @@
     "seeCollection": "See Collection",
     "seeMore": "See More",
     "title": "Lookbook",
-    "back": "Back"
+    "back": "Back",
+    "relatedProducts": "Related Products"
   },
   "membership": {
     "exchangePoints": "Redeem your Point",
