--- a/locales/id.json
+++ b/locales/id.json
@@ -230,7 +230,8 @@
     "seeCollection": "Lihat Koleksi",
     "seeMore": "Lebih Banyak",
     "title": "Lookbook",
-    "back": "Kembali"
+    "back": "Kembali",
+    "relatedProducts": "Produk Terkait"
   },
   "membership": {
     "exchangePoints": "Tukar Poin Anda",
