--- a/locales/en.json
+++ b/locales/en.json
@@ -68,7 +68,8 @@
     "leaveReply": "Leave a reply",
     "postComment": "Post a comment",
     "recentPost": "Recent Post",
-    "title": "Blogs"
+    "title": "Blogs",
+    "allBlog": "All Blogs"
   },
   "breadcrumb": {
     "home": "Home",
@@ -77,7 +78,8 @@
     "account": "Account",
     "search": "Search",
     "lookbook":"Lookbook",
-    "forgotPassword":"Forgot Password"
+    "forgotPassword":"Forgot Password",
+    "blog":"Blog"
   },
   "cart": {
     "amount": "Amount",
