--- a/locales/id.json
+++ b/locales/id.json
@@ -68,7 +68,8 @@
     "leaveReply": "Tinggalkan Balasan",
     "postComment": "Kirimkan Komentar",
     "recentPost": "Postingan Terbaru",
-    "title": "Blog"
+    "title": "Blog",
+    "allBlog": "Semua Blog"
   },
   "breadcrumb": {
     "home": "Beranda",
@@ -77,7 +78,8 @@
     "account": "Akun",
     "search": "Pencarian",
     "lookbook": "Lookbook",
-    "forgotPassword":"Lupa Kata Sandi"
+    "forgotPassword":"Lupa Kata Sandi",
+    "blog": "Blog"
   },
   "cart": {
     "amount": "Jumlah",
