feat: product review on product detail page

--- a/locales/id.json
+++ b/locales/id.json
@@ -371,7 +371,7 @@
     "additionalInfo": "Informasi tambahan",
     "addToCart": "Masukan Keranjang",
     "adjust": "Sesuaikan",
-    "all": "Semua Produk",
+    "all": "Semua",
     "back": "Kembali",
     "backToHome": "Kembali ke Beranda",
     "buyNow": "Beli Sekarang",
