--- a/locales/en.json
+++ b/locales/en.json
@@ -371,7 +371,7 @@
     "addToCart": "Add To Cart",
     "additionalInfo": "Additional Info",
     "adjust": "Adjust",
-    "all": "All Products",
+    "all": "All",
     "back": "Back",
     "backToHome": "Back to Home",
     "buyNow": "Buy Now",
