fix: order summary box cart detail

--- a/locales/en.json
+++ b/locales/en.json
@@ -172,6 +172,7 @@
   "global": {
     "back": "Back",
     "backHome": "Back to Home",
+    "changeCart": "Change Cart",
     "checkoutTitle": "Checkout",
     "continueShopping": "Continue Shopping",
     "error": "Error",
