--- a/locales/id.json
+++ b/locales/id.json
@@ -172,6 +172,7 @@
   "global": {
     "back": "Kembali",
     "backHome": "Kembali ke Halaman Utama",
+    "changeCart": "Ubah Keranjang",
     "checkoutTitle": "Selesaikan Pesanan",
     "continueShopping": "Lanjutkan Berbelanja",
     "error": "Terjadi kesalahan",
