feat: create account tab
- same styling form for address and location

--- a/locales/en.json
+++ b/locales/en.json
@@ -19,7 +19,7 @@
     "editAccount": "Edit Account",
     "fetchComplete": "Fecth complete",
     "hallo": "Hallo",
-    "invoice": "Invoice",
+    "invoice": "Print Invoice",
     "items": "Items",
     "logout": "Logout",
     "loyaltyPointLabel": "You have",
