--- a/locales/id.json
+++ b/locales/id.json
@@ -22,7 +22,7 @@
     "editAccount": "Sunting Akun",
     "fetchComplete": "Berhasil mengambil",
     "hallo": "Halo",
-    "invoice": "Tagihan",
+    "invoice": "Cetak Tagihan",
     "items": "Barang",
     "logout": "Keluar",
     "loyaltyPointLabel": "Anda memiliki",
