feat: thank you page and payment confirmation with check order

--- a/locales/en.json
+++ b/locales/en.json
@@ -356,7 +356,7 @@
     "placeholderOrderId": "Order ID",
     "email": "Email",
     "placeholderEmail": "user@gmail.com",
-    "checkOrder": "Check Order",
+    "checkOrder": "Check Order Number",
     "details": "Details",
     "optional": "Optional",
     "invalidFileType": "File Type not supported",
