--- a/locales/id.json
+++ b/locales/id.json
@@ -82,7 +82,8 @@
     "search": "Pencarian",
     "lookbook": "Lookbook",
     "forgotPassword": "Lupa Kata Sandi",
-    "blog": "Blog"
+    "blog": "Blog",
+    "review": "Ulasan"
   },
   "cart": {
     "amount": "Jumlah",
