feat: new style testimoni

--- a/locales/en.json
+++ b/locales/en.json
@@ -82,7 +82,8 @@
     "search": "Search",
     "lookbook": "Lookbook",
     "forgotPassword": "Forgot Password",
-    "blog": "Blog"
+    "blog": "Blog",
+    "testimoni": "Testimonial"
   },
   "cart": {
     "amount": "Amount",
