feat: clean code

--- a/locales/en.json
+++ b/locales/en.json
@@ -119,7 +119,8 @@
     "submit": "Submit",
     "submitError": "Failed send a message",
     "submitSuccess": "Success send a message",
-    "title": "Contact"
+    "title": "Contact",
+    "info": "We want to provide you with the best online shopping experience for more information, we will be happy to help answer any questions you may have."
   },
   "coupon": {
     "apply": "Apply",
