--- a/locales/id.json
+++ b/locales/id.json
@@ -119,7 +119,8 @@
     "submit": "Kirimkan",
     "submitError": "Gagal mengirim pesan",
     "submitSuccess": "Berhasil mengirim pesan",
-    "title": "Kontak"
+    "title": "Kontak",
+    "info": "Kami ingin memberi Anda pengalaman belanja online terbaik untuk informasi lebih lanjut, kami akan dengan senang hati membantu menjawab pertanyaan apa pun yang Anda miliki."
   },
   "coupon": {
     "apply": "Terapkan",
