--- a/locales/id.json
+++ b/locales/id.json
@@ -8,7 +8,7 @@
     "completedFailed": "Gagal Selesaikan Pesanan",
     "completedOrderBtnNo": "Batal",
     "completedOrderBtnYes": "Selesai",
-    "completedOrderDescription": "Pastikan produk sudah diterima dan sesuai dengan pesanan anda",
+    "completedOrderDescription": "Dengan melakukan klik Selesai, dana pembelian akan diteruskan ke Penjual. Pastikan produk sudah diterima dan sesuai dengan pesanan Anda.",
     "completedOrderNote": "Dengan melakukan klik Selesai, dana pembelian akan diteruskan ke Penjual",
     "completedOrderTitle": "Selesaikan Pesanan",
     "completedSuccess": "Sukses Selesaikan Pesanan",
