hotfix: normalisasi ie8

--- a/locales/id.json
+++ b/locales/id.json
@@ -225,8 +225,8 @@
     "chooseAnyAccountToLogin": "Anda memiliki beberapa akun yang terdaftar, silakan pilih salah satu untuk masuk",
     "title": "Masuk",
     "clickHere": "Lupa Kata Sandi",
-    "forgetPassword": "Lupa kata sandi?",
-    "dontHaveAccount": "Belum punya akun?",
+    "forgetPassword": "",
+    "dontHaveAccount": "",
     "disclaimer": "Dengan klik 'Masuk' berarti anda setuju menerima pemberitahuan melalui Whatsapp dan mengetahui",
     "register": "Daftar",
     "email": "Email",
